--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
         <java.version>17</java.version>
         <vaadin.version>24.7.0.alpha1</vaadin.version>
         <flow.version>24.7.crudflow-SNAPSHOT</flow.version>
+        <hilla.version>24.7.crudflow-SNAPSHOT</hilla.version>
     </properties>
     <dependencies>
         <dependency>
@@ -106,6 +107,13 @@
                 <groupId>com.vaadin</groupId>
                 <artifactId>flow-bom</artifactId>
                 <version>${flow.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>hilla-bom</artifactId>
+                <version>${hilla.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
