--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-grid-flow</artifactId>
+                <version>24.7-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
